JETcompiler/Tests/bad/bad010.myout
Incorrect return type. Expected "IntegerType and "VoidType" was found, line 3
